ingress.yaml
apiVersion: networking.k8.io/v1

kind: Ingress

metadata:
  name: aks-app-ingress 
  namespace: aks-app 

spec: 
  ingressClassName: nginx 

  rules:
    -http:
      paths:
        -path: /api 
          PathType: Prefix 

          backend: 
            service: 
              name: aks-app-backend
              port:
                number: 8080

        -path: /
        PathType: Prefix
        backend: 
          service: 
            name: aks-app-frontend 
            port: 
            number: 80
